--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,6 @@
     -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
   </body>
 </html>
